fix: fix alignment of capacity on the homepage

--- a/src/pages/Home/TableCard/index.module.scss
+++ b/src/pages/Home/TableCard/index.module.scss
@@ -47,6 +47,8 @@
 }
 
 .capacity {
+  margin-left: auto;
+
   span[data-role='dec'] {
     color: var(--decimal-color);
   }
